--- a/source/sass/blocks/use-case.scss
+++ b/source/sass/blocks/use-case.scss
@@ -2,42 +2,61 @@
 
 .use-case {
   position: relative;
-  padding-top: 25px;
-  padding-bottom: 40px;
+  box-sizing: border-box;
+  min-width: variables.$mobile-width;
+  padding: 25px variables.$mobile-padding 40px;
   background-color: #eaeaea;
+
+  @media (min-width: variables.$tablet-width) {
+    padding: 43px 0 0;
+    background-color: #ffffff;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    padding: 43px variables.$desktop-padding 65px;
+    background-color: #eaeaea;
+  }
 }
 
 .use-case__title {
+  margin-bottom: 40px;
+
+  @media (min-width: variables.$tablet-width) {
+    margin-bottom: 63px;
+    margin-left: variables.$tablet-padding;
+  }
+
   @media (min-width: variables.$desktop-width) {
     position: absolute;
     top: -136px;
+    right: 0;
     left: 0;
-    padding-right: 894px;
+    width: calc(variables.$desktop-width - 2 * variables.$desktop-padding);
+    margin-right: auto;
+    margin-bottom: 0;
+    margin-left: auto;
   }
 }
 
 .use-case__wrapper {
-  box-sizing: border-box;
-  min-width: variables.$mobile-width;
   margin: 0 auto;
-  padding: 0 20px;
 
   @media (min-width: variables.$tablet-width) {
     display: grid;
     grid-template-areas:
       "description description"
-      "details-list total";
+      "details-list total"
+      "slider slider";
     grid-template-rows: repeat(2, auto);
-    grid-template-columns: 1fr 174px;
-    padding-left: 30px;
-    padding-right: 30px;
+    grid-template-columns: 1fr calc(174px + variables.$tablet-padding);
   }
 
   @media (min-width: variables.$desktop-width) {
     position: relative;
     display: block;
-    padding-left: 110px;
-    padding-right: 894px;
+    box-sizing: border-box;
+    width: calc(variables.$desktop-width - 2 * variables.$desktop-padding);
+    padding-right: 784px;
   }
 }
 
@@ -47,11 +66,15 @@
 
   @media (min-width: variables.$tablet-width) {
     grid-area: description;
+    margin-right: variables.$tablet-padding;
     margin-bottom: 54px;
+    margin-left: variables.$tablet-padding;
   }
 
   @media (min-width: variables.$desktop-width) {
+    margin-right: 0;
     margin-bottom: 69px;
+    margin-left: 0;
   }
 }
 
@@ -60,7 +83,7 @@
   grid-template-columns: repeat(auto-fit, 124px);
   justify-content: center;
   grid-gap: 32px;
-  margin-bottom: 34.5px;
+  margin-bottom: 34px;
 
   @media (min-width: variables.$tablet-width) {
     grid-area: details-list;
@@ -68,80 +91,17 @@
     justify-content: start;
     grid-gap: 42px;
     margin-right: 80px;
+    margin-left: variables.$tablet-padding;
   }
 
   @media (min-width: variables.$desktop-width) {
     margin-right: 0;
     margin-bottom: 55px;
+    margin-left: 0;
   }
 }
 
 .use-case__details-list {
-  /*position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 86px;
-  padding-top: 14.5px;
-  margin-right: 19px;
-  margin-left: 19px;
-  border-top: 1px solid #cdcdcd;
-
-  &::before {
-    position: absolute;
-    top: -1px;
-    left: -19px;
-    width: 19px;
-    height: 54px;
-    content: "";
-    border: 1px solid #cdcdcd;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border-right: none;
-  }
-
-  &::after {
-    position: absolute;
-    top: -1px;
-    right: -19px;
-    width: 19px;
-    height: 54px;
-    content: "";
-    border: 1px solid #cdcdcd;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border-left: none;
-  }*/
-
-  /*display: grid;
-  grid-template-areas:
-    "border-left number border-right"
-    "border-left description border-right";
-  grid-template-rows: repeat(2, auto);
-  grid-template-columns: 1fr auto 1fr;
-  padding-top: 14.5px;
-
-  &::before {
-    grid-area: border-left;
-    width: 19px;
-    height: 54px;
-    content: "";
-    border: 1px solid #cdcdcd;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border-right: none;
-  }
-
-  &::after {
-    grid-area: border-right;
-    width: 19px;
-    height: 54px;
-    content: "";
-    border: 1px solid #cdcdcd;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border-left: none;
-  }*/
   position: relative;
   display: flex;
   flex-direction: column;
@@ -178,6 +138,11 @@
 
   @media (min-width: variables.$tablet-width) {
     font-size: 14px;
+    background-color: #ffffff;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    background-color: #eaeaea;
   }
 }
 
@@ -202,13 +167,19 @@
     margin-bottom: 11px;
     font-size: 30px;
     line-height: 1.2;
+    background-color: #ffffff;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    background-color: #eaeaea;
   }
 }
 
-
 .use-case__total-cost {
+  display: flex;
+  justify-content: center;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 40px;
   padding-top: 0;
   padding-bottom: 0;
   text-align: center;
@@ -217,25 +188,51 @@
   line-height: 1.4;
   text-transform: uppercase;
 
+  dd {
+    margin-left: 5px;
+  }
+
   @media (min-width: variables.$tablet-width) {
     grid-area: total;
+    flex-direction: column;
+    align-items: flex-end;
     margin-top: 0;
-    margin-bottom: 0;
+    margin-right: variables.$tablet-padding;
+    margin-bottom: 34px;
     font-size: 20px;
     line-height: 1.4;
     text-align: right;
   }
 
   @media (min-width: variables.$desktop-width) {
+    flex-direction: row;
+    justify-content: flex-start;
     text-align: left;
+
+    dt {
+      margin-right: 63px;
+    }
   }
 }
 
 .use-case__slider-container {
+  @media (min-width: variables.$tablet-width) {
+    position: relative;
+    grid-area: slider;
+    box-sizing: border-box;
+    min-height: 462px;
+    margin-top: 250px;
+    padding: 366px variables.$tablet-padding 56px;
+    background-color: #eaeaea;
+  }
+
   @media (min-width: variables.$desktop-width) {
     position: absolute;
     top: -209px;
-    right: 110px;
+    right: variables.$desktop-padding;
+    margin-top: 0;
+    padding: 0;
+    background-color: transparent;
   }
 }
 
@@ -252,6 +249,16 @@
 
 .use-case__image-container {
   margin-bottom: 15px;
+
+  @media (min-width: variables.$tablet-width) {
+    position: absolute;
+    top: -170px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    position: relative;
+    top: 0;
+  }
 }
 
 .use-case__control-label {
