--- a/source/sass/blocks/about-product.scss
+++ b/source/sass/blocks/about-product.scss
@@ -3,42 +3,31 @@
 $icon-size: 60px;
 
 .about-product {
-  padding-top: 10px;
-  padding-bottom: 49px;
+  box-sizing: border-box;
+  min-width: variables.$mobile-width;
+  padding: 10px variables.$mobile-padding 49px;
 
   @media (min-width: variables.$tablet-width) {
-    padding-top: 20px;
-    padding-bottom: 47px;
+    padding: 20px variables.$tablet-padding 47px;
     border-bottom: 1px solid #e6e6e6;
   }
 
-  @media (min-width: 1440px) {
-    padding-top: 36px;
-    padding-bottom: 205px;
+  @media (min-width: variables.$desktop-width) {
+    padding: 36px variables.$desktop-padding 205px;
     border: none;
   }
 }
 
 .about-product__wrapper {
-  box-sizing: border-box;
-  min-width: 320px;
-  margin-right: auto;
-  margin-left: auto;
-  padding-right: 20px;
-  padding-left: 20px;
-
-  @media (min-width: variables.$tablet-width) {
-    padding-right: 30px;
-    padding-left: 30px;
-  }
-
   @media (min-width: variables.$desktop-width) {
-    padding-right: 110px;
-    padding-left: 110px;
+    width: calc(variables.$desktop-width - 2 * variables.$desktop-padding);
+    margin-right: auto;
+    margin-left: auto;
   }
 }
 
 .about-product__list {
+  counter-reset: section;
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
@@ -114,31 +103,33 @@ $icon-size: 60px;
     }
 
     &::after {
+      counter-increment: section;
       position: absolute;
       top: 0;
       right: 0;
       z-index: -1;
+      content: counters(section, ".");
       font-family: "Oswald", "Arial", sans-serif;
       font-size: 280px;
       line-height: 1em;
       color: #f2f2f2;
     }
 
-    &--useful::after {
+    /*&--useful::after {
       right: 22px;
-      content: "1";
+      //content: "1";
     }
 
     &--form::after {
-      content: "2";
+      //content: "2";
     }
 
     &--dose::after {
-      content: "3";
+      //content: "3";
     }
 
     &--result::after {
-      content: "4";
-    }
+      //content: "4";
+    }*/
   }
 }
