--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,4 +1,5 @@
 @use "../variables.scss";
+@use "../mixins.scss";
 
 .catalog {
   padding: 27px 20px 35px;
@@ -28,20 +29,51 @@
 
 .catalog__title-secondary {
   position: relative;
-  justify-self: start;
-  margin: 25px auto 36px auto;
+  display: inline-block;
+  margin: 25px auto 36px;
+  padding-right: 22px;
   font-size: 24px;
   line-height: 1;
   font-family: "Oswald", "Arial", sans-serif;
   color: #000000;
   font-weight: 400;
+  background-color: #ffffff;
+
+  &::after {
+    @include mixins.title-line-right;
+  }
 
   @media (min-width: variables.$tablet-width) {
     grid-column: 1 / -1;
+    justify-self: start;
     margin: 8px 0 80px;
     padding-right: 36px;
     padding-left: 36px;
     font-size: 36px;
+
+    &::after {
+      top: 22px;
+      width: calc(100vw - 30px);
+    }
+
+    &::before {
+      @include mixins.title-line-left;
+      left: -30px;
+    }
+  }
+
+  @media (min-width: variables.$tablet-width) {
+    padding-right: 35px;
+    padding-left: 0;
+
+    &::after {
+      width: calc(100vw - variables.$indent-width);
+    }
+
+    &::before {
+      left: calc(0px - variables.$indent-width);
+      width: calc(variables.$indent-width - 40px);
+    }
   }
 }
 
@@ -135,8 +167,7 @@
   @media (min-width: variables.$desktop-width) {
     &--additional {
       grid-column: 1 / 4;
-      grid-template-areas:
-        "title information button";
+      grid-template-areas: "title information button";
       grid-template-columns: 1fr 286px 244px;
       grid-template-rows: auto;
       column-gap: 38px;
@@ -164,6 +195,14 @@
   margin-bottom: 18px;
   color: #222222;
   text-decoration: none;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 
   @media (min-width: variables.$tablet-width) {
     margin-bottom: 21px;
@@ -381,6 +420,16 @@
     font-size: 16px;
     line-height: 1.2;
   }
+}
+
+.catalog__show-more-link:hover .catalog__show-more-title,
+.catalog__show-more-link:hover .catalog__show-more-addition {
+  opacity: 0.6;
+}
+
+.catalog__show-more-link:active .catalog__show-more-title,
+.catalog__show-more-link:active .catalog__show-more-addition {
+  opacity: 0.3;
 }
 
 .catalog__show-all {
