--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -3,3 +3,25 @@
   padding: 0;
   list-style-type: none;
 }
+
+@mixin title-line-left {
+  position: absolute;
+  top: 22px;
+  left: -70px;
+  z-index: -1;
+  width: 30px;
+  height: 2px;
+  content: "";
+  background-color: #68b738;
+}
+
+@mixin title-line-right {
+  position: absolute;
+  top: 15px;
+  left: 0;
+  z-index: -1;
+  width: calc(100vw - 20px);
+  height: 2px;
+  content: "";
+  background-color: #68b738;
+}
