--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -24,6 +24,11 @@
 .catalog__title {
   @media (min-width: variables.$tablet-width) {
     grid-column: 1 / -1;
+    margin-bottom: 82px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    margin-bottom: 84px;
   }
 }
 
@@ -62,7 +67,7 @@
     }
   }
 
-  @media (min-width: variables.$tablet-width) {
+  @media (min-width: variables.$desktop-width) {
     padding-right: 35px;
     padding-left: 0;
 
@@ -133,14 +138,15 @@
 
   @media (min-width: variables.$tablet-width) {
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, auto);
+    grid-template-rows: 162px repeat(3, auto);
     grid-template-areas:
+      "image"
       "title"
       "information"
       "button";
     margin-top: 81px;
     margin-bottom: 60px;
-    padding: 161px 36px 39px;
+    padding: 0 36px 39px;
     background-color: #f2f2f2;
 
     &::after {
@@ -185,8 +191,12 @@
   align-self: end;
 
   @media (min-width: variables.$tablet-width) {
-    position: absolute;
-    top: -73px;
+    position: relative;
+    bottom: 34px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    bottom: 46px;
   }
 }
 
@@ -458,6 +468,13 @@
   background-repeat: no-repeat;
   background-position: center;
 
+  @media (min-resolution: 2dppx) {
+    background-image:
+      linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
+      url("../img/order-all@2x.jpg");
+    background-size: 280px 289px;
+  }
+
   &::before {
     position: absolute;
     top: 58px;
@@ -483,6 +500,14 @@
       linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
       url("../img/order-all-tablet.jpg");
     background-size: 100% 200px;
+    background-repeat: no-repeat;
+
+    @media (min-resolution: 2dppx) {
+      background-image:
+        linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
+        url("../img/order-all-tablet@2x.jpg");
+      background-size: 100% 200px;
+    }
 
     &::before {
       top: 57px;
@@ -506,7 +531,15 @@
     background-image:
       linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
       url("../img/order-all.jpg");
-    background-size: 245px 288px;
+    background-size: 280px 289px;
+    background-position: - 35px;
+
+    @media (min-resolution: 2dppx) {
+      background-image:
+        linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
+        url("../img/order-all@2x.jpg");
+      background-size: 280px 289px;
+    }
   }
 }
 
