--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -47,7 +47,7 @@
     height: 51px;
     margin-right: 40px;
     margin-top: 24px;
-    background-image: url("../img/logos/logo-full.svg");
+    background-image: url("../img/logos/logo-full-tablet.svg");
     background-size: 174px 51px;
   }
 
@@ -55,6 +55,7 @@
     width: 202px;
     height: 59px;
     margin-top: 53px;
+    background-image: url("../img/logos/logo-full-desktop.svg");
     background-size: 202px 59px;
   }
 }
