--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -86,7 +86,7 @@
   position: relative;
   width: 24px;
   height: 18px;
-  margin-top: 24px;
+  margin-top: 22px;
   margin-left: 5px;
   background-color: #ffffff;
   border: none;
@@ -110,12 +110,12 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 1.5px;
+  height: 2px;
   content: "";
   background-color: #000000;
   box-shadow:
-    0 6px 0 0 #000000,
-    0 12px 0 0 #000000;
+    0 8px 0 0 #000000,
+    0 16px 0 0 #000000;
 }
 
 .navigation--opened .navigation__toggle {
@@ -238,7 +238,11 @@
     margin-bottom: 10px;
 
     &:not(:last-child) {
-      margin-right: 34px;
+      margin-right: 38px;
+    }
+
+    &:first-child {
+      margin-right: 35px;
     }
 
     &--current {
@@ -248,11 +252,21 @@
     &--current::after {
       position: absolute;
       right: 0;
-      bottom: 0;
+      bottom: 2px;
       left: 0;
       height: 2px;
       content: "";
       background-color: #68b738;
+    }
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    &:not(:last-child) {
+      margin-right: 34px;
+    }
+
+    &:first-child {
+      margin-right: 37px;
     }
   }
 }
