--- a/source/sass/blocks/program-kinds.scss
+++ b/source/sass/blocks/program-kinds.scss
@@ -25,11 +25,15 @@
 .program-kinds__list {
   display: grid;
   grid-template-columns: 1fr;
-  grid-gap: 20px;
+  row-gap: 20px;
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
   list-style-type: none;
+
+  @media (min-width: variables.$tablet-width) {
+    row-gap: 30px;
+  }
 
   @media (min-width: variables.$desktop-width) {
     grid-template-columns: 1fr 1fr;
@@ -40,7 +44,7 @@
 .program-kinds__item {
   display: grid;
   grid-template-rows: repeat(3, auto);
-  grid-template-columns: 60px 1fr;
+  grid-template-columns: 59px 1fr;
   grid-template-areas:
     "icon title"
     "text text"
@@ -63,10 +67,13 @@
       "icon title"
       "text text"
       "link link";
-    padding: 40px 51px 55px 52px;
+    padding: 40px 51px 58px 52px;
   }
 
   &--weight-loss::before {
+    position: relative;
+    top: -2px;
+    left: 2px;
     grid-area: icon;
     align-self: center;
     width: 50px;
@@ -77,12 +84,15 @@
     background-size: 100% 100%;
 
     @media (min-width: variables.$tablet-width) {
+      top: 0;
+      left: 0;
       justify-self: end;
       width: 200px;
-      height: 211px;
+      height: 209px;
     }
 
     @media (min-width: variables.$desktop-width) {
+      position: static;
       justify-self: start;
       width: 100px;
       height: 106px;
@@ -91,6 +101,7 @@
 
   &--weight-gain::before {
     position: relative;
+    top: 2px;
     left: -7px;
     grid-area: icon;
     align-self: center;
@@ -102,12 +113,14 @@
     background-size: 100% 100%;
 
     @media (min-width: variables.$tablet-width) {
-      left: 0;
+      top: 4px;
+      left: 2px;
       width: 268px;
       height: 200px;
     }
 
     @media (min-width: variables.$desktop-width) {
+      top: 6px;
       left: -19px;
       justify-self: start;
       width: 134px;
@@ -137,15 +150,15 @@
   }
 
   @media (min-width: variables.$desktop-width) {
-    margin-top: 0;
-    margin-left: 47px;
+    margin-top: 7px;
+    margin-left: 46px;
   }
 }
 
 .program-kinds__description {
   grid-area: text;
   margin-top: 0;
-  margin-bottom: 15px;
+  margin-bottom: 12px;
   padding-top: 22px;
   padding-bottom: 23px;
   border-bottom: 1px solid #d9d9d9;
@@ -154,14 +167,14 @@
     margin-bottom: 0;
     padding-top: 24px;
     padding-right: 18px;
-    padding-bottom: 48px;
+    padding-bottom: 53px;
     border: none;
   }
 
   @media (min-width: variables.$desktop-width) {
-    padding-top: 39px;
+    padding-top: 40px;
     padding-right: 0;
-    padding-bottom: 23px;
+    padding-bottom: 28px;
   }
 }
 
@@ -201,7 +214,7 @@
   }
 
   @media (min-width: variables.$tablet-width) {
-    margin-bottom: 53px;
+    margin-bottom: 57px;
     padding: 0;
     padding-right: 57px;
     font-size: 20px;
@@ -211,5 +224,26 @@
   @media (min-width: variables.$desktop-width) {
     margin-bottom: 0;
     padding-right: 60px;
+  }
+}
+
+@media (max-width: variables.$mobile-width-max) {
+  .program-kinds__item--weight-gain .program-kinds__title {
+    margin-top: 3px;
+  }
+
+  .program-kinds__item--weight-gain .program-kinds__description {
+    margin-bottom: 14px;
+    padding-top: 23px;
+  }
+}
+
+@media (min-width: variables.$desktop-width) {
+  .program-kinds__item--weight-loss .program-kinds__title {
+    margin-top: 4px;
+  }
+
+  .program-kinds__item--weight-gain .program-kinds__description {
+    margin-top: 5px;
   }
 }
