--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,6 +9,7 @@
 @use "./blocks/program-kinds.scss";
 @use "./blocks/about-product.scss";
 @use "./blocks/use-case.scss";
+@use "./blocks/slider.scss";
 @use "./blocks/footer.scss";
 @use "./blocks/contacts.scss";
 @use "./blocks/form.scss";
