--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -8,7 +8,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 60px;
-    padding: 65px 30px 76px;
+    padding: 54px 30px 76px;
   }
 
   @media (min-width: variables.$desktop-width) {
@@ -17,25 +17,29 @@
     width: 1220px;
     margin-right: auto;
     margin-left: auto;
-    padding: 74px 110px 86px;
+    padding: 68px 110px 86px;
   }
 }
 
 .catalog__title {
+  @media (min-width: variables.$mobile-width) {
+    margin-bottom: 40px;
+  }
+
   @media (min-width: variables.$tablet-width) {
     grid-column: 1 / -1;
     margin-bottom: 82px;
   }
 
   @media (min-width: variables.$desktop-width) {
-    margin-bottom: 84px;
+    margin-bottom: 86px;
   }
 }
 
 .catalog__title-secondary {
   position: relative;
   display: inline-block;
-  margin: 25px auto 36px;
+  margin: 0 auto 34px;
   padding-right: 22px;
   font-size: 24px;
   line-height: 1;
@@ -68,14 +72,18 @@
   }
 
   @media (min-width: variables.$desktop-width) {
+    margin-bottom: 76px;
     padding-right: 35px;
     padding-left: 0;
+    line-height: 1.3;
 
     &::after {
+      top: 28px;
       width: calc(100vw - variables.$indent-width);
     }
 
     &::before {
+      top: 28px;
       left: calc(0px - variables.$indent-width);
       width: calc(variables.$indent-width - 40px);
     }
@@ -86,12 +94,12 @@
   position: relative;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, auto);
+  grid-template-rows: min-content 1fr auto;
   grid-template-areas:
     "image title"
     "image information"
     "button button";
-  padding-top: 19px;
+  padding-top: 21px;
   padding-bottom: 25px;
 
   &--additional {
@@ -144,6 +152,7 @@
       "title"
       "information"
       "button";
+    align-content: start;
     margin-top: 81px;
     margin-bottom: 60px;
     padding: 0 36px 39px;
@@ -162,6 +171,7 @@
       grid-template-areas:
         "title information"
         "button button";
+      grid-template-rows: auto;
       grid-template-columns: 1fr auto;
       margin-top: 0;
       margin-bottom: 0;
@@ -171,6 +181,9 @@
   }
 
   @media (min-width: variables.$desktop-width) {
+    margin-bottom: 61px;
+    padding-bottom: 41px;
+
     &--additional {
       grid-column: 1 / 4;
       grid-template-areas: "title information button";
@@ -179,6 +192,7 @@
       column-gap: 38px;
       align-content: start;
       align-items: center;
+      margin-bottom: 0;
       padding: 13px 0 15px;
     }
   }
@@ -187,22 +201,38 @@
 .catalog__image-link {
   grid-area: image;
   display: grid;
-  justify-self: center;
-  align-self: end;
+  justify-items: center;
+  align-items: start;
+  padding-top: 13px;
 
   @media (min-width: variables.$tablet-width) {
     position: relative;
-    bottom: 34px;
+    bottom: 58px;
   }
 
   @media (min-width: variables.$desktop-width) {
-    bottom: 46px;
+    bottom: 64px;
+  }
+}
+
+.catalog__product-card--large .catalog__image-link {
+  padding-top: 9px;
+  padding-bottom: 0;
+
+  @media (min-width: variables.$tablet-width) {
+    position: relative;
+    bottom: 84px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    bottom: 88px;
   }
 }
 
 .catalog__title-link {
   grid-area: title;
-  margin-bottom: 18px;
+  margin-bottom: 14px;
+  padding-right: 50px;
   color: #222222;
   text-decoration: none;
 
@@ -215,20 +245,30 @@
   }
 
   @media (min-width: variables.$tablet-width) {
-    margin-bottom: 21px;
+    margin-bottom: 13px;
+    padding-right: 45px;
+    padding-left: 45px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    margin-bottom: 17px;
+    padding-right: 20px;
+    padding-left: 20px;
   }
 }
 
 .catalog__product-card--additional .catalog__title-link {
-  margin-bottom: 13px;
+  margin-bottom: 11px;
 
   @media (min-width: variables.$tablet-width) {
     justify-self: start;
+    margin-bottom: 0;
+    padding-right: 0;
+    padding-left: 0;
   }
 
   @media (min-width: variables.$desktop-width) {
     margin-right: auto;
-    margin-bottom: 0;
   }
 }
 
@@ -247,20 +287,34 @@
     line-height: 1.2;
     text-align: center;
   }
+
+  @media (min-width: variables.$desktop-width) {
+    font-size: 20px;
+    line-height: 1.1;
+    text-align: center;
+  }
+}
+
+.catalog__product-card--additional .catalog__product-title {
+  line-height: 1;
 }
 
 .catalog__product-information {
   grid-area: information;
+  align-self: start;
   width: 100%;
-  margin-bottom: 9px;
   font-size: 12px;
   line-height: 1.3em;
   border-collapse: collapse;
 
   @media (min-width: variables.$tablet-width) {
-    margin-bottom: 33px;
+    margin: 0 1px 34px;
     font-size: 16px;
-    line-height: 1.4;
+    line-height: 1.6;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    margin-left: 4px;
   }
 }
 
@@ -270,16 +324,16 @@
 
   @media (min-width: variables.$tablet-width) {
     justify-self: end;
-    margin-bottom: 21px;
-    margin-left: auto;
+    margin: 0 2px 0 auto;
     font-size: 16px;
-    line-height: 1.4;
+    line-height: 1.3;
   }
 
   @media (min-width: variables.$desktop-width) {
     min-width: 286px;
     margin-bottom: 0;
     text-align: left;
+    align-self: end;
   }
 }
 
@@ -322,11 +376,34 @@
 
 .catalog__button {
   grid-area: button;
-  margin-top: 13px;
+  margin-top: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 
   @media (min-width: variables.$tablet-width) {
-    align-self: end;
-    margin-top: auto;
+    margin: 0 1px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    margin: 0 2px;
+  }
+}
+
+.catalog__product-card--large .catalog__button {
+  @media (max-width: variables.$mobile-width-max) {
+    margin-top: 9px;
+  }
+}
+
+.catalog__product-card--additional .catalog__button {
+  margin-top: 12px;
+
+  @media (min-width: variables.$tablet-width) {
+    margin-top: 18px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    margin-top: 0;
   }
 }
 
@@ -345,7 +422,7 @@
 
 .catalog__more-goods {
   position: relative;
-  margin-bottom: 50px;
+  margin-bottom: 51px;
 
   &::after {
     position: absolute;
@@ -369,6 +446,10 @@
     &::after {
       width: 0;
     }
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    padding: 35px 36px 42px;
   }
 }
 
@@ -396,7 +477,7 @@
 
   @media (min-width: variables.$tablet-width) {
     margin-top: 0;
-    padding-top: 123px;
+    padding: 120px 34px 8px;
 
     &::before {
       top: 14px;
@@ -404,6 +485,10 @@
       height: 60px;
       background-image: url("../img/icons/plus-big.svg");
     }
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    padding: 124px 0 8px;
   }
 }
 
@@ -414,7 +499,11 @@
   text-align: center;
 
   @media (min-width: variables.$tablet-width) {
-    margin-bottom: 23px;
+    margin-bottom: 20px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    margin-bottom: 22px;
   }
 }
 
@@ -455,9 +544,10 @@
   position: relative;
   box-sizing: border-box;
   width: 280px;
-  margin: 35px auto 0;
-  padding: 186px 58px 43px 58px;
-  line-height: 1.2;
+  margin: 34px auto 0;
+  padding: 187px 58px 42px;
+  font-size: 16px;
+  line-height: 1.25;
   text-align: center;
   color: #ffffff;
   background-color: #68b738;
