--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -25,8 +25,8 @@
   height: 6px;
   background-color: inherit;
 
-  -webkit-appearance: none;
-  -moz-appearance: none;
+  -webkit-appearance: none; /* stylelint-disable-line */
+  -moz-appearance: none; /* stylelint-disable-line */
   appearance: none;
 
   &::-moz-range-track {
@@ -84,7 +84,7 @@
       inset 0 0 0 12px #ffffff,
       0 1px 3px 0 rgba(0, 0, 0, 0.16);
 
-    -webkit-appearance: none;
+    -webkit-appearance: none; /* stylelint-disable-line */
 
     &:hover {
       box-shadow:
