--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -72,7 +72,7 @@
   }
 
   @media (min-width: variables.$desktop-width) {
-    margin-bottom: 76px;
+    margin-bottom: 74px;
     padding-right: 35px;
     padding-left: 0;
     line-height: 1.3;
@@ -190,10 +190,10 @@
       grid-template-columns: 1fr 286px 244px;
       grid-template-rows: auto;
       column-gap: 38px;
-      align-content: start;
+      align-content: center;
       align-items: center;
       margin-bottom: 0;
-      padding: 13px 0 15px;
+      padding: 13px 0 13px;
     }
   }
 }
@@ -252,8 +252,8 @@
 
   @media (min-width: variables.$desktop-width) {
     margin-bottom: 17px;
-    padding-right: 20px;
-    padding-left: 20px;
+    padding-right: 18px;
+    padding-left: 24px;
   }
 }
 
@@ -331,9 +331,10 @@
 
   @media (min-width: variables.$desktop-width) {
     min-width: 286px;
+    margin-top: 6px;
     margin-bottom: 0;
     text-align: left;
-    align-self: end;
+    align-self: center;
   }
 }
 
@@ -347,30 +348,54 @@
   @media (min-width: variables.$tablet-width) {
     border-bottom: none;
   }
+
+  @media (min-width: variables.$desktop-width) {
+    display: flex;
+  }
 }
 
 .catalog__product-information th {
-  padding: 0;
   font-weight: 400;
   text-align: left;
 }
 
 .catalog__product-information td {
-  padding: 0;
   text-align: right;
+}
+
+.catalog__product-card--additional th {
+  @media (min-width: variables.$desktop-width) {
+    flex-grow: 1;
+    padding-right: 10px;
+  }
 }
 
 .catalog__product-card--additional td {
   @media (min-width: variables.$tablet-width) {
     min-width: 93px;
   }
+
+  @media (min-width: variables.$desktop-width) {
+    min-width: 44px;
+    text-align: left;
+  }
 }
 
 .catalog__product-information th,
 .catalog__product-information td {
+  padding: 0;
+
   @media (min-width: variables.$tablet-width) {
     padding-top: 2px;
     padding-bottom: 3px;
+  }
+}
+
+.catalog__product-card--additional th,
+.catalog__product-card--additional td {
+  @media (min-width: variables.$desktop-width) {
+    padding-top: 0;
+    padding-bottom: 0;
   }
 }
 
@@ -404,6 +429,8 @@
 
   @media (min-width: variables.$desktop-width) {
     margin-top: 0;
+    margin-right: 0;
+    margin-left: 0;
   }
 }
 
@@ -616,7 +643,7 @@
     width: 245px;
     min-height: 288px;
     margin: 0;
-    padding: 184px 41px 42px 43px;
+    padding: 186px 41px 43px 39px;
     text-align: center;
     background-image:
       linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
@@ -629,6 +656,15 @@
         linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
         url("../img/order-all@2x.jpg");
       background-size: 280px 289px;
+    }
+
+    &::before {
+      top: 57px;
+      left: 0;
+      width: 80px;
+      height: 82px;
+      margin-right: auto;
+      margin-left: auto;
     }
   }
 }
